# halite-tournament

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  manage.py  pyproject.toml
src/project/: asgi.py  settings.py  urls.py  wsgi.py
src/tournament/: admin.py  apps.py  dataclasses.py  exceptions.py  models.py  runner.py  urls.py
src/tournament/management/commands/: runmatch.py
src/tournament/migrations/: 0001_initial.py  0002_bot.py  0003_match_user_is_npc_alter_bot_sigma_matchresult.py  0004_bot_created_at_bot_updated_at.py  0005_alter_user_is_npc.py  0006_alter_user_is_npc.py  0007_matchresult_unique_bot_match.py
src/tournament/static/tournament/script/: load-replay.js  localized-datetime.js  parse-replay.js  parsereplay.js  visualizer.js
src/tournament/static/tournament/style/: bootstrap.min.css  general.css
src/tournament/templates/: 400.html  403.html  404.html  500.html
src/tournament/templates/tournament/: base.html  bot_detail.html  bot_list.html  bot_private_detail.html  bot_private_update.html  index.html  match_detail.html  match_list.html  visualizer.html
src/tournament/templates/tournament/documentation/: basics_intro.html  basics_intro.md  best_practices.html  documentation.html  documentation_sidebar.html  early_mid_late_game.html  faqs.html  game_rules.html  game_servers.html  getting_started.html  halite_cli.html  improve_random.html  improve_random.md  next_steps.md  (+4 more)
src/tournament/templatetags/: tournament_extras.py
src/tournament/views/: __init__.py  api.py  auth.py  bot.py  documentation.py  generic.py  match.py  other.py
(+5 files in other folders)
